All Detail, New and Delete working (navigation and CRUD). On happy path as no validation yet. Some changes to ProductReferenceModel to allow for multiple selection during Project creation.  Not reaaly following single responsability...

--- a/Presentation/Views/CustomerNewView.xaml
+++ b/Presentation/Views/CustomerNewView.xaml
@@ -52,6 +52,8 @@
                     </TextBox>
                 </Grid>
 
+                <TextBlock Grid.Row="2" Text="{Binding ErrorMessage}" Style="{StaticResource FormErrorText}"/>
+
                 <Grid Grid.Row="3">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
