--- a/Presentation/Resources/Styling/AppStyles.xaml
+++ b/Presentation/Resources/Styling/AppStyles.xaml
@@ -115,6 +115,12 @@
         <Setter Property="TextAlignment" Value="Left" />
     </Style>
 
+    <!--Form Error-->
+    <Style x:Key="FormErrorText" TargetType="TextBlock" BasedOn="{StaticResource FormLabelText}">
+        <Setter Property="FontSize" Value="10" />
+        <Setter Property="Foreground" Value="#EA79AC" />
+        <Setter Property="TextWrapping" Value="Wrap"/>
+    </Style>
 
     <!--Input Text Field-->
     <Style x:Key="InputText" TargetType="TextBox">
